--- a/Assignments/01/q2.md
+++ b/Assignments/01/q2.md
@@ -1,30 +1,37 @@
 # Question 2: 
-1. __Playing a Decent Game of Table Tennis (Ping-Pong)__
+## 1. __Playing a Decent Game of Table Tennis (Ping-Pong)__
 
 AI-powered robots have achieved amateur-level proficiency in table tennis. Google DeepMind developed a robot capable of competing with human players, winning approximately 45% of matches against amateurs. This marks a significant advancement in robotic agility and real-time decision-making for robots. As far as challenges are concerned, replicating the nuanced control, reflexes, and strategic depth of professional human players remains challenging. The robot struggles with faster, lower, and edge shots, indicating limitations in handling complex in-game dynamics.
 https://www.technologyreview.com/2024/08/09/1096102/google-deepmind-trained-a-robot-to-beat-humans-at-table-tennis/ 
 https://www.thescottishsun.co.uk/tech/13335106/google-deepmind-robot-table-tennis-beat-human-ai-olympics/
 
-2. __Playing a Decent Game of Bridge at a Competitive Level__
+## 2. __Playing a Decent Game of Bridge at a Competitive Level__
+
 AI has made notable progress in bridge, a game characterized by incomplete information and partnership dynamics. In 2022, an AI developed by French startup NukkAI defeated eight world-champion bridge players in a controlled setting, demonstrating advanced decision-making capabilities.
 https://www.theguardian.com/technology/2022/mar/29/artificial-intelligence-beats-eight-world-champions-at-bridge
 
-3. __Writing an Intentionally Funny Story__
+## 3. __Writing an Intentionally Funny Story__
+
 AI language models, such as OpenAI's GPT, can generate coherent narratives and mimic various writing styles. However, producing humor that resonates with human audiences involves understanding deep cultural nuances, and context, areas where AI still falls short. 
 
-4. __Giving Competent Legal Advice in a Specialized Area of Law__
+## 4. __Giving Competent Legal Advice in a Specialized Area of Law__
+
 AI systems assist in legal research, document review, and contract analysis. Platforms utilizing NLP (natural language processing) can provide preliminary insights into legal questions. However, delivering nuanced legal advice tailored to specific cases requires a depth of understanding and contextual analysis that AI has not yet achieved. AI cannot fully grasp the subtleties of human intent, societal implications, and the dynamic nature of law, requiring human oversight in legal decision-making processes.  
 
-5. __Discovering and Proving a New Mathematical Theorem__
+## 5. __Discovering and Proving a New Mathematical Theorem__
+
 AI has contributed to mathematics by verifying proofs and suggesting conjectures. AI systems have assisted in discovering patterns and providing insights that lead to new theorems. However, the autonomous discovery and formal proof of significant new theorems without human intervention remain limited. As major challenges arise when AI is not able to fully replicate creative intuition and create a deep understanding of diverse abstract mathematical concepts.
 
-6. __Performing a Surgical Operation__
+## 6. __Performing a Surgical Operation__
+
 Robotic-assisted surgeries are common, with systems like the Da Vinci Surgical System enabling precise surgical procedures under human control. Fully autonomous surgical robots are still in experimental stages and are not yet approved for independent operations in clinical settings. As surgeries require real-time decision-making and handling of unexpected complications happening on the go during the surgery. Ensuring safety in an autonomous surgical procedure presents significant technical and ethical challenges for us right now.
 
-7. __Unloading Any Dishwasher in Any Home__
+## 7. __Unloading Any Dishwasher in Any Home__
+
 AI-powered robots can perform specific household tasks in controlled environments. However, the ability to autonomously unload dishwashers across diverse home environment settings, where they have to account for variations in design and arrangements, is beyond current AI capabilities it seems. This requires advanced perception, and the ability to adapt to different spatial configurations and to have delicate manipulation skills to handle a wide variety of dishware safely. However, an example of the potential advancement in this scope can be taken from the Boston Dynamics’ Spot bot which can perform complex physical tasks in its current configuration.
 https://bostondynamics.com/products/spot/ 
 
-8. __Constructing a Building__
+## 8. __Constructing a Building__
+
 AI and robotics have been integrated into construction through the automation of specific tasks, such as 3D printing of building components. The complete autonomous construction of buildings, from planning to execution, without human intervention, has fairly not been realized completely though. Major challenges lie in the complexity of the projects themselves, and the inherent ability required to adapt to environmental conditions on the go makes it challenging for AI to automate this process on its own, where even in the automation of such tasks lie safety concerns for the humans around such constructions sites.  
 https://www.construction-robotics.com/ 
