--- a/Assignments/02/q6.md
+++ b/Assignments/02/q6.md
@@ -1,1 +1,3 @@
-#q6
+# Q6
+![image](https://github.com/user-attachments/assets/9cb71bfa-3b0a-4309-85fb-8a7dd27e0d2f)
+![image](https://github.com/user-attachments/assets/6dc4f807-601e-425c-a661-e074314989b6)
