--- a/Assignments/02/q2.md
+++ b/Assignments/02/q2.md
@@ -1,3 +1,5 @@
 # Q2
 ![image](https://github.com/user-attachments/assets/5ff15cac-9940-4a78-b92d-a0469ca33cef)
 ![image](https://github.com/user-attachments/assets/38e3dc62-592a-438c-abcb-2efee22d27b7)
+## code output:
+![image](https://github.com/user-attachments/assets/ee2809fd-f825-4732-ae2c-06d99b194622)
